--- a/src/view/App.css
+++ b/src/view/App.css
@@ -31,3 +31,31 @@
     transform: rotate(360deg);
   }
 }
+
+.add-button {
+  border: none;
+  border-radius: .5em;
+  background-color: #555555;
+  color: white;
+  padding: 0 10px;
+  margin: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 100px;
+  position: relative;
+  left: 914px;
+}
+
+.add-button:focus {
+  outline: none;
+}
+
+.btn-text {
+  display: inline-block;
+  border-left: 1px solid white;
+  padding: 5px;
+  margin: 0 0 0 10px;
+   
+}
