add plus icon, border radius to form and hover effect to edit icon

--- a/src/view/components/CampaignForm/CampaignForm.css
+++ b/src/view/components/CampaignForm/CampaignForm.css
@@ -3,11 +3,12 @@
     background-color: #e7e7e7;
     display: inline-block;
     width: 300px;
-    border: 1px solid gray;
+	border: 1px solid gray;
+	border-radius: .5em;
 	padding: 20px;
 	position: absolute;
 	right: 256px;
-	top: 38px;
+	top: 48px;
 }
 
 input {
