--- a/src/view/components/Table/Table.css
+++ b/src/view/components/Table/Table.css
@@ -17,9 +17,16 @@ tbody {
 
 th, td {
     padding: 1em;
-    border-bottom: 2px solid white; 
+    border-bottom: 2px solid white;
 }
 
 tr:last-of-type td {
     border: none;
+}
+
+.edit-icon:hover {
+    color: rgb(0, 110, 255);
+    -webkit-box-shadow: 2px 2px 1px 0px rgba(209,205,209,1);
+    -moz-box-shadow: 2px 2px 1px 0px rgba(209,205,209,1);
+    box-shadow: 2px 2px 1px 0px rgba(209,205,209,1);
 }
