--- a/src/view/App.css
+++ b/src/view/App.css
@@ -43,6 +43,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  font-weight: 700;
   width: 100px;
   position: relative;
   left: 914px;
@@ -55,7 +56,6 @@
 .btn-text {
   display: inline-block;
   border-left: 1px solid white;
-  padding: 5px;
+  padding: 10px;
   margin: 0 0 0 10px;
-   
 }
